<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changePasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.ChangePasswordActivity">

    <TextView
        android:id="@+id/change_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/change_password_title"
        android:textAlignment="center"
        android:textColor="@color/indigo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/change_password_edit_user_details_LinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <LinearLayout
        android:id="@+id/change_password_edit_user_details_LinearLayout"
        android:layout_width="335dp"
        android:layout_height="286dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175">

        <TextView
            android:id="@+id/change_password_email"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/change_password_currentPassword"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/change_password_NewPassword"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/change_password_SaveButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update_profile"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.481"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>