...
    <!-- Other strings -->
    <string name="app_name">Backstreet Cycles</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidmFuZGFkZHkiLCJhIjoiY2wxM3AyYzRwMDMyNTNka2E5ZDJyZmxjeSJ9.X21KVzaVpkQhADD-YQw-yA</string>
    <string name="tfl_url">https://api.tfl.gov.uk/BikePoint/</string>
    <string name="user_location_permission_explanation">Permission needed</string>
    <string name="user_location_permission_not_granted">You didn\'t grant permission location</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="NO_PERSON_MATCH">No people matched the query.</string>
    <string name="vintage_cycle_image">backstreet_cycle_logo</string>
    <string name="starting_point">startingPoint</string>
    <string name="pick_up_point">pickUpPoint</string>
...
